# dose_instruction_parser

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.html  README.md  base_config.cfg  environment.yaml  evaluate_model.sh  example.py  genindex.html  index.html  objects.inv  preprocess.py  py-modindex.html  search.html  searchindex.js  set_up_conda.sh  train_model.sh  visualise_model.py
.github/: README.md
.github/workflows/: README.md  coverage-badge.yml  coverage.yml  docs.yaml  docs.yml  pylint.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/di_parser/: di_dosage.html  di_duration.html  di_frequency.html  di_prepare.html  parser.html
_modules/di_parser/tests/: test_parser.html
_modules/dose_instruction_parser/: di_dosage.html  di_duration.html  di_frequency.html  di_prepare.html  parser.html
_modules/dose_instruction_parser/tests/: test_parser.html
_sources/: index.rst.txt
_sources/doc_pages/: adapting_code.rst.txt  developing_di_parser.rst.txt  parsing_dis.rst.txt
_sources/modules/di_parser/: di_parser.data.rst.txt  di_parser.rst.txt  di_parser.tests.rst.txt  modules.rst.txt
_sources/modules/dose_instruction_parser/: dose_instruction_parser.data.rst.txt  dose_instruction_parser.rst.txt  dose_instruction_parser.tests.rst.txt  modules.rst.txt
_static/: custom.css
benchmark/: di_checker.py  get_spacy_test_data.py  prolog_benchmark.py
config/: config.cfg
coverage/: code-coverage-results.md  coverage.json  coverage.xml  tests.md
di_parser/: di_checker.py  di_parser.py  keep_words.txt  replace_words.csv
di_parser/benchmark/: prolog_benchmark.py
di_parser/parserfuncs/: dosage.py  duration.py  frequency.py  prepare.py
di_parser/tests/: prolog_benchmark.py  prolog_test.pl
doc/examples/: example.py  parse_from_file.py
doc/sphinx/: .gitignore  Makefile  README.md  autobuild_mode.sh
doc/sphinx/source/: conf.py  index.rst
doc/sphinx/source/doc_pages/: adapting_code.rst  developing_di_parser.rst  installation.rst  introduction.rst  overview.rst  parsing_dis.rst  quickstart.rst  training_model.rst
doc_pages/: adapting_code.html  developing_di_parser.html  installation.html  overview.html  parsing_dis.html  training_model.html
dose_instruction_parser/: .coveragerc  LICENSE  MANIFEST.in  README.md  pyproject.toml
dose_instruction_parser/di_parser/: __init__.py  __main__.py  di_dosage.py  di_duration.py  di_frequency.py  di_prepare.py  parser.py
dose_instruction_parser/di_parser/data/: keep_words.txt
dose_instruction_parser/di_parser/tests/: conftest.py  test_dosage.py  test_duration.py  test_frequency.py  test_parser.py  test_prepare.py
dose_instruction_parser/doc/sphinx/: .gitignore  Makefile
dose_instruction_parser/doc/sphinx/source/: conf.py  index.rst
dose_instruction_parser/docs/: conf.py  index.rst
dose_instruction_parser/docs/examples/: example.py
dose_instruction_parser/dose_instruction_parser/: __init__.py  __main__.py  di_dosage.py  di_frequency.py  di_parser.py  di_prepare.py  parser.py
dose_instruction_parser/dose_instruction_parser/tests/: conftest.py  test_dosage.py  test_duration.py  test_frequency.py  test_parser.py  test_prepare.py
dose_instruction_parser/src/: __init__.py  __main__.py  di_dosage.py  di_duration.py  di_parser.py  di_prepare.py
dose_instruction_parser/src/di_parser/: __init__.py  __main__.py  di_dosage.py  di_duration.py  di_frequency.py  di_prepare.py  parser.py
dose_instruction_parser/src/di_parser/tests/: conftest.py  test_dosage.py  test_duration.py  test_frequency.py  test_parser.py  test_prepare.py
dose_instruction_parser/src/parser/: __main__.py  di_parser.py
dose_instruction_parser/tests/: test_parser.py
example/: example.py  parsigs.py  score.py
model/: README.md  compare_models.py  evaluate_model.sh  package_model.sh  train_model.sh
model/config/: config.cfg  create_config.py
model/preprocess/: 1-json_to_dat.py  2-dat_to_spacy.py
model/preprocess/for_tagging/: parse_prolog_test_data.py  sample_diabetes_study.py
model/setup/: environment.yaml
modules/di_parser/: di_parser.data.html  di_parser.html  di_parser.tests.html  modules.html
modules/dose_instruction_parser/: dose_instruction_parser.data.html  dose_instruction_parser.html  dose_instruction_parser.tests.html  modules.html
postprocess/: postprocess.py
postprocess/ppfuncs/: dosage.py  duration.py  frequency.py  prepare.py
preprocess/: 1-json_to_dat.py  2-dat_to_spacy.py  dat_to_spacy.py  json_to_dat.py  preprocess.py  sample_diabetes_study.py
