[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dose_instruction_parser"
authors = [
    { name = "Rosalyn Pearson",     email = "rosalyn.pearson@phs.scot"},
    { name = "Nathalie Thureau",    email = "nathalie.thureau@phs.scot"},
    { name = "Mark Macartney",      email = "mark.macartney@phs.scot"},
    { name = "John Reid",           email = "john.reid5@phs.scot"}
]
description = "Tool for parsing free text prescription dose instructions into structured output"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["prescriptions", "dose instructions", "medical free text"]
dependencies = [
    "spacy<3.5.0,>=3.4.2",
    "word2number",
    "inflect",
    "pyspellchecker<= 0.5.5"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pandas", "scikit-learn", "colorama", "ipython", "python-dotenv"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""

[project.scripts]
parse_dose_instructions = "src.__main__:main"

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

