[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dose_instruction_parser"
version = "2023.1001-alpha"
authors = [
    { name = "Rosalyn Pearson",     email = "rosalyn.pearson@phs.scot"},
    { name = "Nathalie Thureau",    email = "nathalie.thureau@phs.scot"},
    { name = "Mark Macartney",      email = "mark.macartney@phs.scot"},
    { name = "John Reid",           email = "john.reid5@phs.scot"},
    { name = "Johanna Jokio",       email = "johanna.jokio@phs.scot"}
]
description = "Tool for parsing free text prescription dose instructions into structured output"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["prescriptions", "dose instructions", "medical free text"]
dependencies = [
    "spacy<3.5.0,>=3.4.2",
    "word2number",
    "inflect",
    "pyspellchecker<=0.5.5",
    "pandas",
    "enlighten>=1.12.4"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["colorama", "ipython", "python-dotenv", "pytest", "pytest-cov", 
        "sphinx", "sphinx-autobuild", "sphinx-copybutton", "sphinx_rtd_theme",
        "bumpver"]

[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""

[project.scripts]
parse_dose_instructions = "di_parser.__main__:main"

# Pytest & coverage

[tool.pytest.ini_options]
pythonpath = ["di_parser"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

omit = ["di_parser/tests/*", 
        "di_parser/data/*"]

ignore_errors = true

[tool.coverage.xml]
output = "coverage.xml"

# Bump version

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"di_parser/__init__.py" = [
    '^__version__ = "{version}"$',
]
"README.md" = [
    'Current version: "{version}"'
]


