[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dose_instruction_parser"
version = "2024.1014-alpha"
authors = [
    { name = "Rosalyn Pearson",     email = "rosalyn.pearson@phs.scot"},
    { name = "Nathalie Thureau",    email = "nathalie.thureau@phs.scot"},
    { name = "Mark Macartney",      email = "mark.macartney@phs.scot"},
    { name = "John Reid",           email = "john.reid5@phs.scot"},
    { name = "Johanna Jokio",       email = "johanna.jokio@phs.scot"}
]
description = "Tool for parsing free text prescription dose instructions into structured output"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["prescriptions", "dose instructions", "medical free text"]
dependencies = [
    "spacy<3.5.0,>=3.4.2",
    "word2number",
    "inflect",
    "pyspellchecker<=0.5.5",
    "numpy==1.26.4",
    "pandas>=2.1.2",
    "enlighten>=1.12.4"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "colorama", 
    "ipython",
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "pytest-md-report",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "bumpver"
]

[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""

[project.scripts]
parse_dose_instructions = "dose_instruction_parser.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["dose_instruction_parser"]
testpaths = ["dose_instruction_parser/tests"]
norecursedirs = ["dose_instruction_parser/data", "build"]
md_report = true
md_report_verbose = 0
md_report_color = "auto"

# Bump version

[tool.bumpver]
current_version = "2024.1014-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"dose_instruction_parser/__init__.py" = [
    '^__version__ = "{version}"$',
]
"README.md" = [
    'Current version: "{version}"'
]


